# PacketManagerServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  server_config.json
configs/: test_config.json
data/: lib.txt
data/importantlib/: 1.0.tar.xz
data/testlib/: 1.0.tar.xz
libs/: CMakeLists.txt
migrations/: db.sql
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt
src/api/packets/: CMakeLists.txt  packets_api.cpp  packets_api.h
src/filereader/: CMakeLists.txt  FileReader.cpp  FileReader.h
src/sqlreader/: CMakeLists.txt  SqlReader.cpp  SqlReader.h
src/webapp/: App.cpp  App.h  CMakeLists.txt
